user authentication and personal playlists

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-REACT_APP_SPOTIFY_OAUTH_TOKEN="BQA8nXUxRFpsiDmjqytzmuzIRYopxiNllFG5aaOf-o12_DXn4EQanorXlNws1OxNuKQqEnPRHRyuV_q4YzlPybJS06KW5Cmw1UxEXrIW4HMu6fTs7h8IBckr-H6Yai64fkM4AAUmBYM728MtRja18wpcVQuU2_QJUywpDyI"
+REACT_APP_SPOTIFY_CLIENT_ID="71e6a99c7cfc4aeaaa8472135644310e"
+REACT_APP_SPOTIFY_AUTHORIZE_URL=https://accounts.spotify.com/authorize
+REACT_APP_SPOTIFY_SCOPES='playlist-read-private'
+REACT_APP_SPOTIFY_REDIRECT_URL=http://localhost:3000
