playlist details and fetched user liked songs

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_SPOTIFY_CLIENT_ID="71e6a99c7cfc4aeaaa8472135644310e"
 REACT_APP_SPOTIFY_AUTHORIZE_URL=https://accounts.spotify.com/authorize
-REACT_APP_SPOTIFY_SCOPES='playlist-read-private playlist-read-private'
+REACT_APP_SPOTIFY_SCOPES='playlist-read-private playlist-read-private user-library-read'
 REACT_APP_SPOTIFY_REDIRECT_URL="http://localhost:3000/menu"
