--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,6 +50,14 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "REACT_APP_SPOTIFY_CLIENT_ID",
+      "REACT_APP_SPOTIFY_AUTHORIZE_URL",
+      "REACT_APP_SPOTIFY_SCOPES",
+      "REACT_APP_SPOTIFY_REDIRECT_URL"
     ]
   }
 }
