--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-feather": "^2.0.9",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
